fix responsive spacing, add update functionality to personal info #5 #9

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -72,6 +72,12 @@
 	.mobile-mu-25{
 		margin-top:0px;
 	}
+	.mobile-rm{
+		margin-left:0px;
+		margin-right:0px;
+		padding-left:0px;
+		padding-right:0px;
+	}
 }
 
 @media screen and (max-width: 550px) {
