--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,8 @@
 html, body{
     min-height: 100% !important;
     height: 100%;
+	margin:0px;
+	padding:0px;
 }
 
 body{
